--- a/day03/user-registration/src/main/resources/application.properties
+++ b/day03/user-registration/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=User Registration
+spring.datasource.url=jdbc:postgresql://localhost:5432/userdb
+spring.datasource.username=postgres
+spring.datasource.password=root
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
